--- a/.github/workflows/convert-to-bbcode.yml
+++ b/.github/workflows/convert-to-bbcode.yml
@@ -23,9 +23,14 @@ jobs:
       run: |
         python convert_to_bbcode.py README.md steam_guide.bbcode
     
+    - name: Split BBCode into sections
+      run: |
+        python split_bbcode_sections.py steam_guide.bbcode
+    
     - name: Commit and push if changed
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git add steam_guide.bbcode
-        git diff --staged --quiet || (git commit -m "Auto-update: Convert README.md to BBCode" && git push)
+        git add bbcode_sections/
+        git diff --staged --quiet || (git commit -m "Auto-update: Convert README.md to BBCode and split sections" && git push)
